force-app/main/default/objects/Utilization_Report__c/Utilization_Report__c.object-meta.xml
<CustomObject>
    <description>Utilization items to drive iEdison reporting</description>
    <label>Utilization Report</label>
    <nameField>
        <displayFormat>UR-{00000}</displayFormat>
        <label>Utilization Report</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilization Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>