force-app/main/default/objects/Utilization_Report__c/fields/Case_RecId__c.field-meta.xml
<CustomField>
    <fullName>Case_RecId__c</fullName>
    <label>Case</label>
    <length>24</length>
    <referenceTo>Forrester_Case__x</referenceTo>
    <relationshipLabel>Utilization Reports</relationshipLabel>
    <relationshipName>Utilization_Reports_Case</relationshipName>
    <type>ExternalLookup</type>
</CustomField>