force-app/main/default/objects/Utilization_Report__c/fields/Case_RecId_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>Case_RecId_ExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Case RecId ExternalId</label>
    <length>24</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>