force-app/main/default/objects/Utilization_Report__c/fields/Commercialization_Plan_Id__c.field-meta.xml
<CustomField>
    <fullName>Commercialization_Plan_Id__c</fullName>
    <label>Commercialization Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Seeking additional funding to further develop this invention</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>Marketing and/or furthering development of this invention to attract commercial
                    partners</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Developing and/or using this invention for internal purposes only</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Developing and/or preparing this invention with intent to commercialize ourselves</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Making available for distribution and/or licensing for research purposes only</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>No current commercialization plan</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>