force-app/main/default/objects/Utilization_Report__c/fields/DOE_S_number__c.field-meta.xml
<CustomField>
    <fullName>DOE_S_number__c</fullName>
    <description>DOE S-number</description>
    <label>DOE S Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>