force-app/main/default/objects/Utilization_Report__c/fields/Election_Status__c.field-meta.xml
<CustomField>
    <fullName>Election_Status__c</fullName>
    <label>Election Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elect to Retain Title</fullName>
            </value>
            <value>
                <fullName>Does Not Retain Title</fullName>
            </value>
            <value>
                <fullName>Designated as Unpatented Biological Material or Research Tool</fullName>
            </value>
            <value>
                <fullName>Under Evaluation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>