force-app/main/default/objects/Utilization_Report__c/fields/Exclusive_Licenses_Name__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_Licenses_Name__c</fullName>
    <label>Exclusive Licenses Options</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>