force-app/main/default/objects/Utilization_Report__c/fields/First_Commercial_Year_of_Sale__c.field-meta.xml
<CustomField>
    <fullName>First_Commercial_Year_of_Sale__c</fullName>
    <label>First Commercial Year of Sale</label>
    <length>4</length>
    <type>Text</type>
</CustomField>