force-app/main/default/objects/Utilization_Report__c/fields/Forrester_Latest_Stage_of_Development__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Latest_Stage_of_Development__c</fullName>
    <label>Forrester Latest Stage of Development</label>
    <length>255</length>
    <type>Text</type>
</CustomField>