force-app/main/default/objects/Utilization_Report__c/fields/Forrester_Non_Exclusive_Optionee_Name__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Non_Exclusive_Optionee_Name__c</fullName>
    <label>Forrester Non-Exclusive Licenses Options</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>