force-app/main/default/objects/Utilization_Report__c/fields/Forrester_Other_Income_and_Equity__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Other_Income_and_Equity__c</fullName>
    <label>Other Income and Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>