force-app/main/default/objects/Utilization_Report__c/fields/Forrester_Royalties_on_Sales__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Royalties_on_Sales__c</fullName>
    <label>Royalties on Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>