force-app/main/default/objects/Utilization_Report__c/fields/Forrester_Small_Business_Optionee_Name__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Small_Business_Optionee_Name__c</fullName>
    <label>Forrester Small Business Licenses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>