force-app/main/default/objects/Utilization_Report__c/fields/Forrester_Summarized_Agreement_Income__c.field-meta.xml
<CustomField>
    <fullName>Forrester_Summarized_Agreement_Income__c</fullName>
    <label>Summarized Agreement Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>