force-app/main/default/objects/Utilization_Report__c/fields/Funding_Grant_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Grant_Number__c</fullName>
    <label>iEdison Grant Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>