force-app/main/default/objects/Utilization_Report__c/fields/Grantee_Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Grantee_Organization_Name__c</fullName>
    <label>Grantee Organization Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>