force-app/main/default/objects/Utilization_Report__c/fields/Invention_Docket_Number__c.field-meta.xml
<CustomField>
    <fullName>Invention_Docket_Number__c</fullName>
    <description>Invention Docket Number</description>
    <label>Invention Docket Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>