force-app/main/default/objects/Utilization_Report__c/fields/Invention_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Invention_Report_Date__c</fullName>
    <label>Invention Report Date</label>
    <type>Date</type>
</CustomField>