force-app/main/default/objects/Utilization_Report__c/fields/Invention_Report_Number__c.field-meta.xml
<CustomField>
    <fullName>Invention_Report_Number__c</fullName>
    <label>Invention Report Number</label>
    <length>25</length>
    <type>Text</type>
</CustomField>