force-app/main/default/objects/Utilization_Report__c/fields/Invention_Title__c.field-meta.xml
<CustomField>
    <fullName>Invention_Title__c</fullName>
    <label>Invention Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>