force-app/main/default/objects/Utilization_Report__c/fields/Is_US_Manufacturing_Required_1__c.field-meta.xml
<CustomField>
    <fullName>Is_US_Manufacturing_Required_1__c</fullName>
    <label>Is US Manufacturing Required 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>N</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>