force-app/main/default/objects/Utilization_Report__c/fields/Latest_Stage_of_Development__c.field-meta.xml
<CustomField>
    <fullName>Latest_Stage_of_Development__c</fullName>
    <label>Latest Stage of Development</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Licensed</fullName>
            </value>
            <value>
                <fullName>Licensed</fullName>
            </value>
            <value>
                <fullName>Commercialized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>