force-app/main/default/objects/Utilization_Report__c/fields/New_Us_Jobs__c.field-meta.xml
<CustomField>
    <fullName>New_Us_Jobs__c</fullName>
    <label>New US Jobs</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>