force-app/main/default/objects/Utilization_Report__c/fields/Non_Exclusive_Licenses_Name__c.field-meta.xml
<CustomField>
    <fullName>Non_Exclusive_Licenses_Name__c</fullName>
    <label>Non-Exclusive Licenses Options</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>