force-app/main/default/objects/Utilization_Report__c/fields/Primary_Agency__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agency__c</fullName>
    <label>Primary Agency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>