force-app/main/default/objects/Utilization_Report__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <label>Product Name(s)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>