force-app/main/default/objects/Utilization_Report__c/fields/Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Year__c</fullName>
    <label>Reporting Year</label>
    <length>10</length>
    <type>Text</type>
</CustomField>