force-app/main/default/objects/Utilization_Report__c/fields/Small_Business_Licenses_Name__c.field-meta.xml
<CustomField>
    <fullName>Small_Business_Licenses_Name__c</fullName>
    <label>Small Business Licenses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>