force-app/main/default/objects/Utilization_Report__c/fields/Title_Election_Date__c.field-meta.xml
<CustomField>
    <fullName>Title_Election_Date__c</fullName>
    <label>Title Election Date</label>
    <type>Date</type>
</CustomField>