force-app/main/default/objects/Utilization_Report__c/fields/Utilization_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Created_Date__c</fullName>
    <label>Utilization Created Date</label>
    <type>Date</type>
</CustomField>