force-app/main/default/objects/Utilization_Report__c/fields/Utilization_Report_Status__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Report_Status__c</fullName>
    <description>Status</description>
    <label>Utilization Report Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
            <value>
                <fullName>Include for Utilization</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>