force-app/main/default/objects/Utilization_Report__c/fields/Utilization_Report_Title__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Report_Title__c</fullName>
    <formula>Name &amp; &quot; - &quot; &amp; Invention_Title__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utilization Report Title</label>
    <type>Text</type>
</CustomField>