force-app/main/default/objects/Utilization_Report__c/fields/Utilization_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Submitted_Date__c</fullName>
    <label>Utilization Submitted Date</label>
    <type>Date</type>
</CustomField>