force-app/main/default/objects/Utilization_Report__c/fields/Utilization_Updated_Date__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Updated_Date__c</fullName>
    <label>Utilization Updated Date</label>
    <type>Date</type>
</CustomField>