force-app/main/default/objects/Utilization_Report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invention_Docket_Number__c</columns>
    <columns>Invention_Title__c</columns>
    <columns>Invention_Report_Number__c</columns>
    <columns>Reporting_Year__c</columns>
    <columns>Utilization_Report_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Reports</label>
</ListView>